--- a/pom.xml
+++ b/pom.xml
@@ -466,5 +466,10 @@
             <artifactId>beam-sdks-java-extensions-sql</artifactId>
             <version>2.25.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.beam</groupId>
+            <artifactId>beam-sdks-java-io-google-cloud-platform</artifactId>
+            <version>2.25.0</version>
+        </dependency>
     </dependencies>
 </project>
