--- a/pom.xml
+++ b/pom.xml
@@ -471,5 +471,18 @@
             <artifactId>beam-sdks-java-io-google-cloud-platform</artifactId>
             <version>2.25.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.beam/beam-sdks-java-extensions-json-jackson -->
+        <dependency>
+            <groupId>org.apache.beam</groupId>
+            <artifactId>beam-sdks-java-extensions-json-jackson</artifactId>
+            <version>2.25.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.beam/beam-sdks-java-io-elasticsearch -->
+        <dependency>
+            <groupId>org.apache.beam</groupId>
+            <artifactId>beam-sdks-java-io-elasticsearch</artifactId>
+            <version>2.25.0</version>
+        </dependency>
+
     </dependencies>
 </project>
